err/modcommon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Whoosh-2.7.4.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/modcommon'...
Listing './lib/python3.5/site-packages/modcommon/communication'...
Compiling './lib/python3.5/site-packages/modcommon/communication/fileserver.py'...
***   File "./lib/python3.5/site-packages/modcommon/communication/fileserver.py", line 95
    print "getting from %s" % cache_file
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/modcommon/lv2.py'...
***   File "./lib/python3.5/site-packages/modcommon/lv2.py", line 297
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modcommon/lv2_old.py'...
***   File "./lib/python3.5/site-packages/modcommon/lv2_old.py", line 61
    print "schema desconhecido: %s" % pred.encode()
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/modcommon/tests'...
Compiling './lib/python3.5/site-packages/modcommon/tests/test_ladspa.py'...
***   File "./lib/python3.5/site-packages/modcommon/tests/test_ladspa.py", line 12
    print "You must compile caps-AmpV.so and put in %s" % ROOT
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/modcommon-0.99.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/whoosh'...
Listing './lib/python3.5/site-packages/whoosh/analysis'...
Listing './lib/python3.5/site-packages/whoosh/automata'...
Listing './lib/python3.5/site-packages/whoosh/codec'...
Listing './lib/python3.5/site-packages/whoosh/filedb'...
Listing './lib/python3.5/site-packages/whoosh/lang'...
Listing './lib/python3.5/site-packages/whoosh/lang/snowball'...
Listing './lib/python3.5/site-packages/whoosh/matching'...
Listing './lib/python3.5/site-packages/whoosh/qparser'...
Listing './lib/python3.5/site-packages/whoosh/query'...
Listing './lib/python3.5/site-packages/whoosh/support'...
Listing './lib/python3.5/site-packages/whoosh/util'...
Listing './share'...
Listing './share/python-wheels'...
